	* Don't pause players for idling while they are waiting or appearing.

Client:
	* Improved ball message scan.  Clear color attributes of
	  out-of-date ball messages.
	* Fix a bug that made it impossible to lose items.
	* Minimum value for hudRadarLimit option changed from 0 to 0.05
	  because at 0, a randomly flashing dot will be drawn on top of
	  the ship in the center of screen.

X11 Client only:
	* Improve shipshape rendering by fixing some rounding errors.
	* Fix bug that prevented radar colors from being set from xpilotrc.
	* Remove window title flipping.

XPilot NG XP-Replay:
	* Disable some code in color allocation function, it breaks certain
	  recordings.
	* Space key now toggles pause.

Maps:
	* Provide only one version polybloods map, namely that used at the
	  Chaos server (v8T2).  Call it v9.

===============================================================================

This is a summary of changes of release 4.7.2 compared to release 4.7.1.

XPilot NG Control Center:
        * Some usability improvements.

SDL & X11 Client:
	* Renamed option sounds to soundFile.
	* Added boolean option sound which can be used to enable/disable the
	  sound without changing the value of the maxVolume option. Default
	  is true if sound has been compiled into the client.
	* Added option keyToggleSound which toggles the value of option
	  sound. It has no default value.
	* When using X11, only warn about Emulate3Buttons, don't disable it.

SDL Client only:
	* Fixed some memory leaks, e.g. one for HUD messages.
	* Texture bug fixes, should fix the bug in 4.7.1 where the
	  ship is painted as a white box on some machines.

X11 Client only:
	* Configure options --enable-dbe and --enable-mbx should work again.

Server:
	* Put back the old behaviour that dropped mines are immune to gravity.
	  Explanation is that they are "anchored" to the map the same way
	  as the walls are.
	* New option ballCollisionDetaches (default false):